# axum-subdomain-routing

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs
tests/: integration_test.rs
