[package]
name = "axum-subdomain-routing"
version = "0.0.3"
edition = "2024"

[dependencies]
axum = "0.8.7"
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
